messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging
    version: green  # <- switch this to 'blue' or 'green' to control traffic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
